# Sales_PressBrake

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: windows-build.yml
dialogues/: savequotedialog.cpp  savequotedialog.h  toastmessage.cpp  toastmessage.h
helpers/: quotepdfcommon.cpp  quotepdfcommon.h  quotepdfcustomer.cpp  quotepdfcustomer.h  quotepdfdatabuilder.cpp  quotepdfdatabuilder.h  quotepdfheader.cpp  quotepdfheader.h  quotepdfhelper.cpp  quotepdfhelper.h  quotepdfitems.cpp  quotepdfitems.h  quotepdflayout.cpp  quotepdflayout.h  recommendationformatutils.cpp  recommendationformatutils.h  recommendationservice.cpp  recommendationservice.h  recommendationtablehelper.cpp  recommendationtablehelper.h  shortcuthelper.h  stylehelper.cpp  stylehelper.h
models/: machinerecord.h  materialrecord.h  optionrecord.h  quotepdfdata.h  quoterecord.h  recommendationresult.h  toolingrecommendationresult.h  toolingrecord.h  user.h
pages/: adminshellpage.cpp  adminshellpage.h  loginpage.cpp  loginpage.h  machinespage.cpp  machinespage.h  mainwindow.cpp  mainwindow.h  materialspage.cpp  materialspage.h  optionspage.cpp  optionspage.h  quotespage.cpp  quotespage.h  recommendationpage.cpp  recommendationpage.h  toolingpage.cpp  toolingpage.h  usershellpage.cpp  usershellpage.h  userspage.cpp  userspage.h  welcomepage.cpp  welcomepage.h
repositories/: machinerepository.cpp  machinerepository.h  materialrepository.cpp  materialrepository.h  optionrepository.cpp  optionrepository.h  quoterepository.cpp  quoterepository.h  toolingrepository.cpp  toolingrepository.h  userrepository.cpp  userrepository.h
resources/: machines.csv  materials.csv  options.csv  resources.qrc  tooling.csv  users.csv
widgets/: machineformwidget.cpp  machineformwidget.h  machinestablewidget.cpp  machinestablewidget.h  materialformwidget.cpp  materialformwidget.h  materialstablewidget.cpp  materialstablewidget.h  optionformwidget.cpp  optionformwidget.h  optionstablewidget.cpp  optionstablewidget.h  toolingformwidget.cpp  toolingformwidget.h  toolingstablewidget.cpp  toolingstablewidget.h  userformwidget.cpp  userformwidget.h  userstablewidget.cpp  userstablewidget.h
